objects/vlocity_cmt__ContractVersionDiscountPricing__c.object
<CustomObject>
    <description>Discount pricing adjustments provided by a contractual discount. Master-detail child object of Contract Document Discount (ContractVersionDiscount__c).</description>
    <fields>
        <fullName>vlocity_cmt__AdjustmentValue__c</fullName>
        <label>Adjustment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContractVersionDiscountId__c</fullName>
        <label>Contract Document Discount</label>
        <referenceTo>vlocity_cmt__ContractVersionDiscount__c</referenceTo>
        <relationshipLabel>Discounted Pricing</relationshipLabel>
        <relationshipName>ContractVersionDiscountPricing</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PricingVariableId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Variable</label>
        <referenceTo>vlocity_cmt__PricingVariable__c</referenceTo>
        <relationshipLabel>Contract Document Discounted Prices</relationshipLabel>
        <relationshipName>ContractVersionDiscountPricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TimePlanId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Plan</label>
        <referenceTo>vlocity_cmt__TimePlan__c</referenceTo>
        <relationshipLabel>Contract Document Discount Pricing</relationshipLabel>
        <relationshipName>ContractDocumentDiscountPricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TimePolicyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Policy</label>
        <referenceTo>vlocity_cmt__TimePolicy__c</referenceTo>
        <relationshipLabel>Contract Document Discount Pricing</relationshipLabel>
        <relationshipName>ContractDocumentDiscountPricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contract Document Discount Pricing</label>
    <nameField>
        <label>Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Document Discount Pricing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>